Refactor Netty handling and integrate database support
Introduced database management with ORMLite for easier client, license, and IP handling. Refactored and modularized Netty client and server event handling, adding utility functions and simplifying packet handling logic. Adjusted core packet structures for better extensibility and efficiency, and updated configuration for SQLite and MySQL database compatibility.