@@ -1,12 +1,13 @@
 package dev.kirby.netty.registry;
 
 import dev.kirby.netty.Packet;
+import lombok.Getter;
 
 import java.lang.reflect.Constructor;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Getter
 public class RegisteredPacket {
 
     private final Class<? extends Packet> packetClass;
@@ -16,18 +17,11 @@ public class RegisteredPacket {
         this.packetClass = packetClass;
 
         List<Constructor<?>> emptyConstructorList = Arrays.stream(packetClass.getConstructors())
-                .filter(constructor -> constructor.getParameterCount() == 0).collect(Collectors.toList());
-        if (emptyConstructorList.size() == 0) {
+                .filter(constructor -> constructor.getParameterCount() == 0).toList();
+        if (emptyConstructorList.isEmpty())
             throw new NoSuchMethodException("Packet " + packetClass.getSimpleName() + " is missing no-args-constructor");
-        }
+
         this.constructor = (Constructor<? extends Packet>) emptyConstructorList.get(0);
     }
 
-    public Class<? extends Packet> getPacketClass() {
-        return packetClass;
-    }
-
-    public Constructor<? extends Packet> getConstructor() {
-        return constructor;
-    }
 }
